--- a/Q1_25_Builder_Stevolisis/vault_program/package.json
+++ b/Q1_25_Builder_Stevolisis/vault_program/package.json
@@ -1,5 +1,5 @@
 {
-  "license": "ISC",  
+  "license": "ISC",
   "scripts": {
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
@@ -16,5 +16,6 @@
     "@types/mocha": "^9.0.0",
     "typescript": "^4.3.5",
     "prettier": "^2.6.2"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
