--- a/Q1_25_Builder_Stevolisis/capstone/scholartrust/Anchor.toml
+++ b/Q1_25_Builder_Stevolisis/capstone/scholartrust/Anchor.toml
@@ -4,14 +4,14 @@
 resolution = true
 skip-lint = false
 
-[programs.localnet]
+[programs.devnet]
 scholartrust = "6FNxriJHA11Per2YzEiGDMJ1iJsN64Khx3D3iE64U5SF"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
